Closed Bug 876332 Opened 12 years ago Closed 12 years ago

Animated PNG does not work properly in certain demo

Categories

(Core :: Graphics: ImageLib, defect)

24 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24
Tracking Status
firefox23 --- unaffected
firefox24 + verified

People

(Reporter: alice0775, Assigned: joe)

References

Details

(Keywords: regression)

Attachments

(1 file)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/0fed3377c839 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130526 Firefox/24.0 ID:20130526031046 Steps to Reproduce: 1. Open http://people.mozilla.com/~dolske/apng/demo.html 2. Click "Show Demo" button of "Demo 2: Blending modes" 3. Wait for a minutes Alternative Steps to Reproduce: 1. Open http://people.mozilla.com/~dolske/apng/demo-2-over+background.png 2. Wait for a minutes Actual Results: APNG image does not play. After session restore, APNG image is animated one cycle and then stops forever. Expected results: APNG image should be animated forever. Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/00b264c7cced Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130522 Firefox/24.0 ID:20130522092949 Bad: http://hg.mozilla.org/mozilla-central/rev/8eebe35aae63 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130523 Firefox/24.0 ID:20130523044333 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=00b264c7cced&tochange=8eebe35aae63 Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/2a4461b9480b Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130522 Firefox/24.0 ID:20130522221332 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/aaa399729ff4 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130522 Firefox/24.0 ID:20130522221631 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2a4461b9480b&tochange=aaa399729ff4 Suspected: Bug 867758
Also about:robots tab fabicon is also affected. (@mayankleoboy1 reported in http://forums.mozillazine.org/viewtopic.php?p=12884069#p12884069)
In local build Last God: b0d4c7e61aed First Bad: 9ac8495cf585 Regressed by 9ac8495cf585 Joe Drew — Bug 873505 - Set the animation frame's start time based on when we *wanted* to start, not when we actually did. r=seth
Blocks: 873505
No longer blocks: 867758
Summary: Animation PNG dose not work properly in certain demo → Animated PNG does not work properly in certain demo
This fixes this bug. We were setting the currentAnimationFrameTime based on the previous frame's time plus the next frame's timeout, which is nonsense but works a lot of the time because most animations do not have different delays per frame. I have absolutely no idea how to test this automatically.
Assignee: nobody → joe
Attachment #755039 - Flags: review?(seth)
Comment on attachment 755039 [details] [diff] [review] set currentAnimationFrameTime correctly Review of attachment 755039 [details] [diff] [review]: ----------------------------------------------------------------- Include the commit message in the patch.
Attachment #755039 - Flags: review?(seth) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Verified fixed on Fx 24 beta 9, buildID 20130905180733. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0
QA Contact: petruta.rasa
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: